--- a/src/components/AdvertisementSection/advertisement.scss
+++ b/src/components/AdvertisementSection/advertisement.scss
@@ -6,8 +6,7 @@ $namespace: advertisement;
   background-size: cover;
   cursor: default;
   border-radius: var(--medium-border-radius);
-  background-position-x: 20%;
-  background-position-y: top;
+  background-position: center;
   background-repeat: no-repeat;
 
   .#{$namespace}-containerInner {
@@ -15,90 +14,13 @@ $namespace: advertisement;
     gap: 32px;
     align-items: center;
     @include abs-position;
-    padding: 44px;
     padding-top: 96px;
-
-    .#{$namespace}-bannerAction {
-      margin-top: 20px;
-    }
-  }
-
-  .#{$namespace}-appDetails {
-    max-width: 400px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-
-    .#{$namespace}-availableText {
-      font-size: 16px;
-      color: rgba(#fff, 0.9);
-      text-transform: uppercase;
-      line-height: 24px;
-    }
-
-    .#{$namespace}-appName {
-      font-size: 28px;
-      font-weight: 500;
-      line-height: 39px;
-      color: #fff;
-    }
-
-    .#{$namespace}-platformName {
-      font-size: 20px;
-      color: rgba(#fff, 0.9);
-      text-transform: uppercase;
-      line-height: 28px;
-    }
   }
 
   .#{$namespace}-smallIconContainer {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     flex-shrink: 0;
     cursor: pointer;
-
-    &:hover {
-      img {
-        transform: scale(1.1);
-      }
-    }
-
-    img {
-      transition: transform 0.3s ease-in-out;
-      width: 100%;
-    }
-
-    &:hover {
-      .installed {
-        opacity: 0.6;
-      }
-
-      .#{$namespace}-detailClickPanel {
-        opacity: 1;
-      }
-    }
-
-    .#{$namespace}-detailClickPanel {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 36px;
-      @include btnBg($color: $linkColorChange, $attr: color);
-      background: radial-gradient(#000000e6, #ffffff00 90px, #ffffff00 100%);
-      cursor: pointer;
-      transition: all 0.3s ease-in-out;
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      @include scope(wine-red-dark) {
-        .svgIcon {
-          color: #fff;
-        }
-      }
-    }
   }
 }
