--- a/src/components/AdvertisementSection/sectionCarousel.scss
+++ b/src/components/AdvertisementSection/sectionCarousel.scss
@@ -2,40 +2,31 @@
 $namespance: section-carousel;
 
 .#{$namespance}-container {
-  border-radius: var(--medium-border-radius);
+  border-radius: var(--base-border-radius);
   overflow: hidden;
   position: relative;
-  .#{$namespance}-header {
-    position: absolute;
-    z-index: 100;
-    left: 44px;
-    right: 64px;
-    top: 44px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0;
-    .#{$namespance}-headerTitle {
-      font-size: 28px;
-      line-height: 40px;
-      color: #fff;
-    }
-    @include scope(wine-red-dark) {
-      .swiper-switch-container .swiper-switch-icon {
-        @include btnBg(
-          $color: (
-            #fff,
-            nth($switchColorChange, 2),
-            nth($switchColorChange, 3),
-            nth($switchColorChange, 4),
-            nth($switchColorChange, 5),
-          ),
-          $attr: color
-        );
-      }
-    }
-  }
   .#{$namespance}-item {
     height: 360px;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    color: #fff;
+    transition: all 0.2s ease-in-out;
+    width: 44px;
+    height: 44px;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
+    &::after {
+      font-size: 18px;
+    }
+    &:hover {
+      background-color: var(--primary-color);
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .swiper-button-prev,
+    .swiper-button-next {
+      display: none;
+    }
   }
 }
