--- a/src/pages/play-ground/index.scss
+++ b/src/pages/play-ground/index.scss
@@ -11,7 +11,7 @@
   .playGround--body {
     flex: 1;
     position: relative;
-    background-color: #333;
+    background-color: var(--overlay-color);
     iframe {
       border: none;
       outline: none;
