--- a/src/components/language-switch/index.scss
+++ b/src/components/language-switch/index.scss
@@ -1,17 +1,15 @@
 .language-switch {
   border-radius: var(--base-border-radius);
-  height: var(--base-form-height);
+  // line-height: var(--base-form-height);
   border: none;
   outline: none;
   background: none;
   color: currentColor;
   cursor: pointer;
-  // min-width: 80px;
-  width: fit-content;
+  // // min-width: 80px;
+  // width: fit-content;
 
   option {
-    border: none;
-    outline: none;
-    background-color: var(--header-bg-color);
+    background: var(--overlay-color);
   }
 }
