--- a/src/components/search/index.module.scss
+++ b/src/components/search/index.module.scss
@@ -1,15 +1,14 @@
 .container {
   position: relative;
   border-radius: var(--medium-border-radius);
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  background: rgba(255, 255, 255, 1);
-  box-shadow: 0px 16px 16px 0px rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--base-border-color);
+  background: var(--overlay-color);
   overflow: hidden;
   transition: all 0.2s ease-in-out;
 
   .inputContainer {
     position: relative;
-    color: #1f2333ff;
+    color: var(--text-color);
     cursor: pointer;
 
     .icon {
@@ -27,7 +26,6 @@
       &.clearIcon {
         right: 16px;
         font-size: 14px;
-        color: #232642ff;
         cursor: pointer;
         z-index: 2;
       }
@@ -35,7 +33,7 @@
 
     &:hover {
       .clearIcon {
-        color: #db001c;
+        color: var(--danger-color);
       }
     }
 
@@ -47,15 +45,10 @@
       font-size: 16px;
       line-height: 1;
       background: transparent;
-      color: #1f2333ff;
       position: relative;
+      color: var(--text-color);
       outline: none;
       transition: all 0.2s ease-in-out;
-
-      &::-webkit-input-placeholder {
-        color: rgba(#1b1e38, 0.5);
-        transition: opacity 0.2s ease-in;
-      }
     }
   }
 }
