--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,8 @@ body {
 } */
 ::-webkit-scrollbar {
   display: block;
-  width: 12px;
-  height: 12px;
+  width: 0;
+  height: 0;
 }
 
 ::-webkit-scrollbar-track {
