--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,49 +2,30 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
-
-/* html,
-body {
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-} */
 ::-webkit-scrollbar {
-  display: block;
   width: 0;
   height: 0;
 }
 
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0);
+.flex-center {
+  @apply flex justify-center items-center;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #6f6e70;
-  border: 0px solid transparent;
-  /* border-radius: 6px; */
-  cursor: grab;
+.flex-between {
+  @apply flex justify-between items-center;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #535255;
+.flex-start {
+  @apply flex justify-start items-center;
 }
-.activeScroll::-webkit-scrollbar-thumb {
-  background-color: #535255;
+
+.flex-end {
+  @apply flex justify-end items-center;
+}
+
+.section-header {
+  @apply mt-12 mb-8 text-center text-2xl text-slate-700 font-semibold relative pb-4 after:absolute;
+}
+.section-header::after {
+  @apply bottom-0 left-1/2 -translate-x-1/2 h-px w-80 bg-gradient-to-r from-purple-700/0 from-0% via-purple-700 via-50% to-purple-700/0 to-100%;
 }
